--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
 
     
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta content="summary_large_image" name="twitter:card"><meta property="og:type" content="website"><meta property="twitter:title" content="cotacoes bovespa"><meta property="og:title" content="cotacoes bovespa"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen">
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+<script src="https://www.google.com/recaptcha/api.js" async="" defer=""></script>
 <style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 
@@ -77,7 +78,7 @@
 	<img id="top" src="assets/top.png" alt="">
 	<div id="form_container">
 
-		<form id="form_33669" class="appnitro" method="post" action="https://api.boti.com.br/api/v1/cadastrar_cotacao">
+		<form id="boti-form" class="appnitro" method="post" action="https://api.boti.com.br/api/v1/cadastrar_cotacao">
 					<div class="form_description">
 			<p>Insira aqui seus alertas que deseja receber.</p>
 		</div>						
@@ -109,13 +110,15 @@
 			    <input type="hidden" name="form_id" value="33669">
 			    
 				<input id="saveForm" class="button_text" type="submit" name="submit" value="Submit">
+                <div class="g-recaptcha" data-sitekey="6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_"></div>
+      <br>
 		</li>
 			</ul>
 		</form>	
 
 	</div>
 	
-</div></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable"><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width"><div data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text" style="" href="null">
+</div></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable" style=""><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text" style="" href="null">
             <div class="silex-element-content normal">
                 <p>boti.com.br</p>
             </div>
