--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta content="summary_large_image" name="twitter:card"><meta property="og:type" content="website"><meta property="twitter:title" content="cotacoes bovespa"><meta property="og:title" content="cotacoes bovespa"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen">
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<script src="https://www.google.com/recaptcha/api.js" async="" defer=""></script>
 <style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 
