--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
     
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><meta content="summary_large_image" name="twitter:card"><meta property="og:type" content="website"><meta property="twitter:title" content="cotacoes bovespa"><meta property="og:title" content="cotacoes bovespa"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen">
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-<script src="https://www.google.com/recaptcha/api.js" async="" defer=""></script>
-<style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
+<script type="text/javascript">
+  var onloadCallback = function() {
+        grecaptcha.render('html_element', {'sitekey':'6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_'});
+      };
+</script><style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 
 <body data-silex-type="container-element" class="all-style enable-mobile prevent-resizable prevent-selectable editable-style body-initial silex-runtime silex-published" style="" data-current-page="page-home">
@@ -76,7 +79,8 @@
         <div class="form_description">
             <p>Insira aqui seus alertas que deseja receber.</p>
         </div>
-        <div class="g-recaptcha" data-sitekey="6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_"></div>
+
+        <br>
         <ul>
 
             <li id="li_1">
@@ -112,7 +116,8 @@
             </li>
         </ul>
     </form>
-
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&amp;render=explicit" async="" defer="">
+    </script>
 </div></div></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable" style=""><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text" style="" href="null">
             <div class="silex-element-content normal">
                 <p>boti.com.br</p>
