--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
 
             <li class="buttons">
                 <input type="hidden" name="form_id" value="33669">
-                <input class="g-recaptcha" data-sitekey="6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_" data-callback="onSubmit">
-                <input id="submit" class="button_text" type="submit" name="submit" value="Submit">
+                <input id="submit" class="g-recaptcha" data-sitekey="6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_" type="submit" name="submit" value="Submit">
                 <br>
             </li>
         </ul>
