--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 <div id="form_container">
 
     <form id="boti-form" class="appnitro" method="post" action="https://api.boti.com.br/api/v1/cadastrar_cotacao">
+      <button class="g-recaptcha" data-sitekey="your_site_key" data-callback="onSubmit">Submit</button>
         <div class="form_description">
             <p>Insira aqui seus alertas que deseja receber.</p>
         </div>
@@ -111,7 +112,7 @@
 
             <li class="buttons">
                 <input type="hidden" name="form_id" value="33669">
-                <input id="submit" class="g-recaptcha" data-sitekey="6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_" type="submit" name="submit" value="Submit">
+                <input id="submit" class="button_text" type="submit" name="submit" value="Submit">
                 <br>
             </li>
         </ul>
