--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div id="form_container">
 
     <form id="boti-form" class="appnitro" method="post" action="https://api.boti.com.br/api/v1/cadastrar_cotacao">
-      <button class="g-recaptcha" data-sitekey="your_site_key" data-callback="onSubmit">Submit</button>
+      <button class="g-recaptcha" data-sitekey="6LcuaxsdAAAAAMFJRuTm1GIRIm81LdrbbMnr9I9_" data-callback="onSubmit" <="" button="">
         <div class="form_description">
             <p>Insira aqui seus alertas que deseja receber.</p>
         </div>
@@ -116,8 +116,8 @@
                 <br>
             </li>
         </ul>
-    </form>
-</div>
+    
+</button></form></div>
 </div></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable" style=""><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text" style="" href="null">
             <div class="silex-element-content normal">
                 <p>boti.com.br</p>
