--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div id="form_container">
 
     <form id="boti-form" class="appnitro" method="post" action="https://api.boti.com.br/api/v1/cadastrar_cotacao">
-      <div class="g-recaptcha" data-sitekey="6LfxZxsdAAAAAIpzA2N_FcjmbhpaHi5r3kjaVu7M" data-callback="onSubmit" <="" div="">
+
         <div class="form_description">
             <p>Insira aqui seus alertas que deseja receber.</p>
         </div>
@@ -113,12 +113,13 @@
             <li class="buttons">
                 <input type="hidden" name="form_id" value="33669">
                 <input id="submit" class="button_text" type="submit" name="submit" value="Submit">
+                <input type="hidden" class="g-recaptcha" data-sitekey="6LfxZxsdAAAAAIpzA2N_FcjmbhpaHi5r3kjaVu7M" data-callback="onSubmit">
                 <br>
             </li>
         </ul>
-    
-</div></form>
-</div></div></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable" style=""><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text" style="" href="null">
+    </form>
+</div>
+</div></div></div></section><section data-silex-type="container-element" class="container-element editable-style silex-id-1541607078776-1 section-element prevent-resizable" style=""><div data-silex-type="container-element" class="editable-style silex-id-1541607078769-0 container-element silex-element-content website-width" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1432759239473-23 text-style-2 centered-text" style="" href="null">
             <div class="silex-element-content normal">
                 <p>boti.com.br</p>
             </div>
