--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 
             <li class="buttons">
                 <input type="hidden" name="form_id" value="33669">
-                <input id="submit" class="button_text" type="submit" name="submit" value="Submit">
-                <input type="hidden" class="g-recaptcha" data-sitekey="6LfxZxsdAAAAAIpzA2N_FcjmbhpaHi5r3kjaVu7M" data-callback="onSubmit">
+                <button class="g-recaptcha" data-sitekey="6LfxZxsdAAAAAIpzA2N_FcjmbhpaHi5r3kjaVu7M" data-callback="onSubmit">Submit</button>
                 <br>
             </li>
         </ul>
