--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
             <li id="li_1">
                 <label class="description" for="email">Email </label>
                 <div>
-                    <input id="email" name="email" class="element text medium" type="text" maxlength="30" required="">
+                    <input id="email" name="email" class="element text medium" type="text" maxlength="30" required>
                 </div>
             </li>
             <li id="li_2">
                 <label class="description" for="codigo_acao">Nome da Ação </label>
                 <div>
-                    <input id="codigo_acao" name="codigo_acao" class="element text medium" type="text" maxlength="10" required="">
+                    <input id="codigo_acao" name="codigo_acao" class="element text medium" type="text" maxlength="10" required>
                 </div>
             </li>
             <li id="li_3">
                 <label class="description" for="maximo_1">Alerta de Maxima </label>
                 <div>
-                    <input id="maximo_1" name="maximo_1" class="element text medium" type="number" maxlength="6" min="0" max="99999" step="0.01" required="">
+                    <input id="maximo_1" name="maximo_1" class="element text medium" type="number" maxlength="6" min="0" max="99999" step="0.01" required>
                 </div>
             </li>
             <li id="li_4">
                 <label class="description" for="minimo_1">Alerta de Minima </label>
                 <div>
-                    <input id="minimo_1" name="minimo_1" class="element text medium" type="number" maxlength="6" min="0" max="99999" step="0.01" required="">
+                    <input id="minimo_1" name="minimo_1" class="element text medium" type="number" maxlength="6" min="0" max="99999" step="0.01" required>
                 </div>
             </li>
             <br>
