--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
        function onSubmit(token) {
          document.getElementById("boti-form").submit();
        }
-</script><style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
+</script>
+
+
+    <!-- End of genfghfghfghfghfghfghfghfghfghfghfgerator meta tag --><style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 <body class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime silex-published" data-silex-type="container-element" style="" data-current-page="page-home">
     
