--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <h3 style="text-align: center;"><label class="description" for="minimo_1">Alerta de Minima:<br></label><input id="minimo_1" class="element text medium" max="99999" maxlength="6" min="0" name="minimo_1" required="" step="0.01" type="number"></h3>
 <p style="text-align: center;"><br><button class="g-recaptcha" type="submit" data-sitekey="6LfxZxsdAAAAAIpzA2N_FcjmbhpaHi5r3kjaVu7M" data-callback="onSubmit">Enviar</button></p>
 <p style="text-align: center;">&nbsp;</p>
-</form></div></div></div><div data-silex-type="text-element" class="editable-style text-element silex-id-1641066782558-0 page-page-1 paged-element paged-element-visible" title="" style=""><div class="silex-element-content normal"><p><a href="" linktype="LinkTypePage" target="_blank" title="Utilize o BOT no Telegram.">Utilize o BOT no Telegram.</a></p></div></div></div>
+</form></div></div></div></div>
     </section><section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable" style="">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 container-element website-width" style="">
 
