--- a/cadastro-confirmado-com-sucesso.html
+++ b/cadastro-confirmado-com-sucesso.html
@@ -18,7 +18,7 @@
     
 
     
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="css/boti_alerta_acoes.jpg" rel="shortcut icon"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" type="text/css" href="styles.css" media="screen">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="css/boti_alerta_acoes.jpg" rel="shortcut icon"><meta property="description" content="Alerta de Ações"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" type="text/css" href="styles.css" media="screen">
 <script type="text/javascript" src="front-end.js"></script>
 
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
