--- a/cadastro-realizado-com-falha.html
+++ b/cadastro-realizado-com-falha.html
@@ -18,7 +18,7 @@
     
 
     
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="css/boti_alerta_acoes.jpg" rel="shortcut icon"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" type="text/css" href="styles.css" media="screen">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" class="silex-custom-font"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="css/boti_alerta_acoes.jpg" rel="shortcut icon"><meta property="description" content="Alerta de Ações"><script src="js/script.js" type="text/javascript"></script><link href="css/styles.css" rel="stylesheet" type="text/css"><link rel="stylesheet" type="text/css" href="styles.css" media="screen">
 <script type="text/javascript" src="front-end.js"></script>
 
 <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
@@ -27,6 +27,15 @@
        function onSubmit(token) {
          document.getElementById("boti-form").submit();
        }
+</script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async="" src="https://www.googletagmanager.com/gtag/js?id=G-3CD6KS1MHN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3CD6KS1MHN');
 </script><style>body { opacity: 0; transition: .25s opacity ease; }</style></head>
 
 <body class="body-initial all-style enable-mobile prevent-resizable prevent-selectable editable-style silex-runtime silex-published" data-silex-type="container-element" style="" data-current-page="page-cadastro-realizado-com-falha">
