--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <h3 style="text-align: center;"><label class="description" for="minimo_1">Alerta de Minima:<br></label><input id="minimo_1" class="element text medium" max="99999" maxlength="6" min="0" name="minimo_1" required="" step="0.01" type="number"></h3>
 <p style="text-align: center;"><br><button class="g-recaptcha" type="submit" data-sitekey="6LfxZxsdAAAAAIpzA2N_FcjmbhpaHi5r3kjaVu7M" data-callback="onSubmit">Enviar</button></p>
 <p style="text-align: center;">&nbsp;</p>
-</form></div></div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1644630299766-16 page-principal paged-element paged-element-visible" style=""><div data-silex-type="html-element" class="editable-style html-element silex-id-1644630371434-20 page-principal paged-element paged-element-visible" style=""><div class="silex-element-content"><!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
+</form></div></div></div></div><div data-silex-type="container-element" class="editable-style container-element silex-id-1644630299766-16 page-principal paged-element paged-element-visible" style=""><div data-silex-type="text-element" class="editable-style text-element silex-id-1644630322582-18 page-principal paged-element paged-element-visible" style=""><div class="silex-element-content normal"><h3>Regras Gerais</h3></div></div><div data-silex-type="html-element" class="editable-style html-element silex-id-1644630371434-20 page-principal paged-element paged-element-visible" style=""><div class="silex-element-content"><!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
 <p style="text-align: center;"><strong>As regras são simples e sem burocracia</strong></p>
 <ul>
 <li>Cada email pode cadastrar até 10 alertas de Acões, Frações, FII's e etc.</li>
@@ -90,7 +90,7 @@
 <li>Emails sem alertas cadastrados são removidos automaticamente.</li>
 <li>Todos emails enviados possuem link de cancelamento do cadastro.</li>
 <li>Nenhuma conta de email será utilizada para outros fins, alem deste descrito.</li>
-</ul></div></div><div data-silex-type="text-element" class="editable-style text-element silex-id-1644630322582-18 page-principal paged-element paged-element-visible" style=""><div class="silex-element-content normal"><h3>Regras Gerais</h3></div></div></div></div>
+</ul></div></div></div></div>
     </section><section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable" style="">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366450713-2 container-element website-width" style="">
 
